adds database connection

--- a/ReverseTestService/Web.config
+++ b/ReverseTestService/Web.config
@@ -13,15 +13,27 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
-    <behaviors>
+    <services>
+      <service name="ReverseTestService.ReceiveDataService" behaviorConfiguration="ServiceBehaviour">
+        <endpoint address="" binding="webHttpBinding" contract="ReverseTestService.IReceiveDataService" behaviorConfiguration="web" />
+      </service>
+    </services>
+
+    <behaviors>      
       <serviceBehaviors>
-        <behavior>
+        <behavior name="ServiceBehaviour">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
+      
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>      
     </behaviors>
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
